dashboard/style.css
/* ... */
:root{
    --cor:  #000199;
    --cor1: #0002F1;
    --cor2: #989898;
    --cor3: #D5D5D5;
    --cor4: #F1F1F1;
    --cor5: #72777f;
    --cor6: #e5e5e5;
    --shadow: #98989840;

    /* Modo escuro */
    --dark-blue: #3976ff;
    --dark-bg: #111013;
    --dark-cinza-escuro: #1c1b1e;
    --dark-cinza-claro: #989898;
    --dark-cinza: #2e2e2e;
    --dark-laranja: #ff7a00;
    
    /* padding, gap, margin */
    --spacing-big: 18px;            /* espaçamento da tela, input de busca, botões da pág. inicial */
    --spacing-base: 16px;           /* espaçamento de div/sections/conteúdo */
    --spacing-small: 12px;          /* espaçamento dentro dos cards */
    --spacing-cards: 6px 0;         /* espaçamento entre cards */
    --spacing-small-btn: 6px 10px;  /* botões pequenos */

    /* font-sizes */    
    --font-menu: 30px;      /* ícones do menu */
    --font-big: 20px;       /* título das páginas */
    --font-medium: 16px;    /* títulos menores */
    --font-base: 14px;      /* maioria dos textos */
    --font-small: 12px;     /* textinhos menores dos cards */
    --font-smaller: 10px;   /* textinhoinhos */

    /* border-radius */
    --radius: 14px;         /* cards e geral */
    --radius-small: 8px;    /* botões pequenos */
    --radius-round: 30px;   /* 100% redondo */
}

body{
    background-color: var(--cor4);
    user-select: none; /* impede a seleção */
    -webkit-user-select: none; /* garante que funcione em outros navegadores */
    -webkit-tap-highlight-color: transparent; /*tira o destque azul ao tocar nos elementos*/
}

/* conteúdo principal */
main{
    display: flex;
    flex-direction: column;
    padding: var(--spacing-big);
    gap: var(--spacing-base); 
    margin-bottom: 84px; /* pro menu inferior nao tampar nada */
}

/* títulos das páginas */
main > h1{
    font-size: var(--font-big);
    color: var(--cor1);
}

/* títulos menores */
h2 {
    font-size: var(--font-medium);
    font-weight: 400;
    color: #484848;
}

/*Barra de pesquisa*/
div.pesquisa{
    position: relative;
}

div.pesquisa > input{
    width: 100%;
    border-radius: var(--radius);
    padding: var(--spacing-big);
    font-size: var(--font-base);
    background-color: white;
    border: none;
}

div.pesquisa > input:focus{
    outline: 1px solid #d5d5d5;
}

div.pesquisa > img{
    position: absolute;
    right: 5%;
    top: 50%; 
    transform: translateY(-50%);
    pointer-events: none;
}

/* ===== Página inicial -> Alex - Isabella ===== */

/* div dos cards de resumo de rendimento, serviços e peças */
.resumo {
    display: flex;
    flex-direction: column;
    gap: var(--spacing-small);
}

/* div dos cards que levam para outra pagina */
.resumo-links {
    display: flex;
    gap: var(--spacing-small);
}

.resumo-card {
    position: relative;
    background-color: white;
    width: 100%;
    height: 100px;
    border-radius: var(--radius);
    padding: var(--spacing-base);
    text-decoration: none;
}

.resumo-card > span {
    color: var(--cor1);
    font-weight: 400;
    font-size: 2em;
}

.resumo-card > p {
    color: var(--cor5);
    font-size: var(--font-small);
    margin-top: -4px;
}

.resumo-card i {
    font-size: var(--font-small);
    color: #bdbdbd;
    position: absolute;
    top: var(--spacing-base);
    right: var(--spacing-base);
}

span.red {
    color: #ef1b1b;
}

/* divisor */
.divisor{
    width: 100%;
    height: 1px;
    margin: 8px 0;
    background-color: white;
}

/* Modo escuro */
body.dark .index h1{
    color: var(--dark-blue);
}

body.dark .index input, body.dark .resumo-card, body.dark .card-servicos{
    background-color: var(--dark-cinza-escuro);
}

body.dark .index .blue, body.dark .ver-detalhes, body.dark .preco{
    color: var(--dark-blue);
}

body.dark .index .orange{
    color: var(--dark-laranja);
}

body.dark .card-servicos{
    border: none;
}

body.dark .info-servico, body.dark .info-secundaria{
    color: var(--dark-cinza-claro);
}

body.dark .card-servicos .info-destaque{
    color: white;
}

body.dark .status.andamento{
    background-color: transparent;
    border: 1px solid var(--dark-laranja);
    color: var(--dark-laranja);
}

body.dark .menuInferior a{
    color: var(--dark-cinza-claro);
}

/* ===== página de clientes -> Isabella =====*/

/* .title ta sendo usada na pág. de clientes e serviços */
.title {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.title h1 {
    color: var(--cor1);
    font-size: var(--font-big);
}

.title button, .title a {
    cursor: pointer;
    color: white;     
    background-color: var(--cor);
    font-size: var(--font-base);
    padding: var(--spacing-small-btn);
    border-radius: var(--radius-small);
    text-decoration: none;
    border: none;
}

.cliente-card {
    display: flex;
    flex-direction: column;
    background-color: white;
    border-radius: var(--radius);
    padding: var(--spacing-small);
    margin: var(--spacing-cards);
    border: 2px solid var(--cor6);
}

/* texto principal do card */
.info-destaque {
    font-size: var(--font-base);
}

/* textos menores */
.info-secundaria{
    font-size: var(--font-small);
    color: #72777f;
}

.ver-detalhes {
    margin-top: 12px;
    margin-right: auto; /* pra não pegar a linha inteira */
    font-size: var(--font-small);
    color: var(--cor1);
    text-decoration: none;
}

.ver-detalhes:hover {
    text-decoration: underline;
    cursor: pointer;
}

/* ===== página de detalhes do cliente -> Isabella =====*/

.voltar {
    margin-right: auto;
    color: var(--cor1);
    font-size: var(--font-medium);
    border-radius: var(--radius-small); 
}

.voltar:hover {
    background-color: var(--cor1);
    color: white;
    transition: 0.1s ease;
}

.cliente-detalhes {
    position: relative;    
    display: flex;
    flex-direction: column;
    background-color: white;
    font-size: var(--font-base);
    padding: var(--spacing-small);
    border-radius: var(--radius);
    border: 2px solid var(--cor6);
}
/* ... */

